--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "raf": "^2.0.4",
+    "throttled-resize": "^0.1.0",
     "wolfy87-eventemitter": "^4.2.11"
   },
   "testling": {
