--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "mediaquery-js",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "ES6 Mediaquery utility",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {},
   "repository": {
     "type": "git",
