--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "mediaquery-js",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "ES6 CSS3 mediaquery to JavaScript bridge",
   "main": "./dist/index.js",
-  "scripts": {},
+  "scripts": {
+    "build": "browserify index.js -o dist/index.js -t [ babelify --presets [ es2015 ] ]"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/ehtb/mediaquery-js.git"
@@ -16,14 +18,15 @@
   "license": "MIT",
   "devDependencies": {
     "babel-eslint": "^3.0.1",
-    "babelify": "^6.0.2",
-    "browserify": "~4.1.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babelify": "^7.2.0",
+    "browserify": "13.0.0",
     "eslint": "^0.20.0",
     "tape": "~2.12.3",
     "testling": "~1.6.1"
   },
   "dependencies": {
-    "throttled-resize": "^0.3.0"
+    "throttled-resize": "^0.3.1"
   },
   "testling": {
     "files": "test.js",
